--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ defaults:
     values:
       image: true
 
+picture:
+  ignore_missing_images: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
