--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ defaults:
 
 picture:
   ignore_missing_images: true
+  fast_build: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
