Add links to pictures
Note workaround for bug:
https://rbuchberger.github.io/jekyll_picture_tag/users/notes/kramdown_bug.html?highlight=nomarkdown

--- a/_data/picture.yml
+++ b/_data/picture.yml
@@ -5,3 +5,5 @@ markup_presets:
     fallback_width: 50
     fallback_format: original
     formats: [webp, original]
+    link_source: true
+    nomarkdown: false
